--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive metro line map of Paris</title>
+  <title> Test </title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900|Dosis:400,500,600,700'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <section class="sign">
-  <h1 class="line-name"><span class="line-type">M</span><span class="sign__line" data-line="m1">1</span> La Défense – Château de Vincennes</h1>
+  <h1 class="line-name"><span class="line-type">M</span><span class="sign__line" data-line="m1">1</span> AMK LINK </h1>
   <ol class="line" data-line="m1">
     <li class="stop" data-transfer>
-      <strong class="stop__name">La Défense</strong>
+      <strong class="stop__name"> NGS JPN AMK ST21</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-t">T</span>
@@ -24,17 +24,9 @@
         </div>
       </div>
     </li>
-    <li class="stop">
-      <strong class="stop__name">Esplanade de La Défense</strong>
-    </li>
-    <li class="stop">
-      <strong class="stop__name">Pont de Neuilly</strong>
-    </li>
-    <li class="stop">
-      <strong class="stop__name">Les Sablons</strong>
-    </li>
+
     <li class="stop" data-transfer>
-      <strong class="stop__name">Porte Maillot</strong>
+      <strong class="stop__name"> NGS JPN ST2</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-rer">RER</span>
@@ -43,27 +35,18 @@
       </div>
     </li>
     <li class="stop">
-      <strong class="stop__name">Argentine</strong>
+      <strong class="stop__name"> NGS LNK {NO_STOPPAGE}</strong>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Charles de Gaulle Étoile</strong>
+      <strong class="stop__name">NGS CENTRAL</strong>
       <div class="stop__transfers">
         <div>
-            <span class="stop__transfer stop__transfer--type-m">M</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m2">2</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m6">6</span>
-        </div>
-        <div>
-            <span class="stop__transfer stop__transfer--type-rer">RER</span>
-            <span class="stop__transfer stop__transfer--rer" data-line="rerA">A</span>
-        </div>
-      </div>
-    </li>
+
     <li class="stop">
-      <strong class="stop__name">Georges V</strong>
+      <strong class="stop__name"> NGS CHORD</strong>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Franklin D. Roosevelt</strong>
+      <strong class="stop__name">NGS ARB ST15</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -72,7 +55,7 @@
       </div>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Champs-Élysées-Clemenceau</strong>
+      <strong class="stop__name"> ARB NGS ST13</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -81,7 +64,7 @@
       </div>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Concorde</strong>
+      <strong class="stop__name">ARB N</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -91,10 +74,10 @@
       </div>
     </li>
     <li class="stop">
-      <strong class="stop__name">Tuileries</strong>
+      <strong class="stop__name"> ARB S</strong>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Palais Royal-Musée du Louvre</strong>
+      <strong class="stop__name"> ARB VASHI ST9 </strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -103,40 +86,18 @@
       </div>
     </li>
     <li class="stop">
-      <strong class="stop__name">Louvre-Rivoli</strong>
+      <strong class="stop__name">VASHI ARB ST7</strong>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Châtelet</strong>
+      <strong class="stop__name"> VASHI MAIN</strong>
       <div class="stop__transfers">
         <div>
-            <span class="stop__transfer stop__transfer--type-m">M</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m4">4</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m7">7</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m11">11</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m14">14</span>
-        </div>
-        <div>
-            <span class="stop__transfer stop__transfer--type-rer">RER</span>
-            <span class="stop__transfer stop__transfer--rer" data-line="rerA">A</span>
-            <span class="stop__transfer stop__transfer--rer" data-line="rerB">B</span>
-            <span class="stop__transfer stop__transfer--rer" data-line="rerD">D</span>
-        </div>
-      </div>
-    </li>
-    <li class="stop" data-transfer>
-      <strong class="stop__name">Hôtel de Ville</strong>
-      <div class="stop__transfers">
-        <div>
-            <span class="stop__transfer stop__transfer--type-m">M</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m11">11</span>
-        </div>
-      </div>
-    </li>
+
     <li class="stop">
-      <strong class="stop__name">Saint-Paul</strong>
+      <strong class="stop__name"> VASHI CENTRAL</strong>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Bastille</strong>
+      <strong class="stop__name"> VASHI RNC ST4</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -146,7 +107,7 @@
       </div>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Gare de Lyon</strong>
+      <strong class="stop__name"> RNC VASHI ST1</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -160,7 +121,7 @@
       </div>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Reuilly-Diderot</strong>
+      <strong class="stop__name">RNC B</strong>
       <div class="stop__transfers">
         <div>
             <span class="stop__transfer stop__transfer--type-m">M</span>
@@ -169,38 +130,12 @@
       </div>
     </li>
     <li class="stop" data-transfer>
-      <strong class="stop__name">Nation</strong>
+      <strong class="stop__name">RNC MAIN</strong>
       <div class="stop__transfers">
         <div>
-            <span class="stop__transfer stop__transfer--type-m">M</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m2">2</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m6">6</span>
-            <span class="stop__transfer stop__transfer--m" data-line="m9">9</span>
-        </div>
-        <div>
-            <span class="stop__transfer stop__transfer--type-rer">RER</span>
-            <span class="stop__transfer stop__transfer--rer" data-line="rerA">A</span>
-        </div>
-      </div>
-    </li>
-    <li class="stop" data-transfer>
-      <strong class="stop__name">Porte de Vincennes</strong>
-      <div class="stop__transfers">
-        <div>
-            <span class="stop__transfer stop__transfer--type-t">T</span>
-            <span class="stop__transfer stop__transfer--t" data-line="t3a">3<sub>a</sub></span>
-            <span class="stop__transfer stop__transfer--t" data-line="t3b">3<sub>b</sub></span>
-        </div>
-      </div>
-    </li>
+
     <li class="stop">
-      <strong class="stop__name">Saint-Mandé</strong>
-    </li>
-    <li class="stop">
-      <strong class="stop__name">Bérault</strong>
-    </li>
-    <li class="stop">
-      <strong class="stop__name">Château de Vincennes</strong>
+      <strong class="stop__name">RNC S3</strong>
     </li>
   </ol>
 </section>
